--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^8.0.8",
     "koa2-cors": "^2.0.6",
-    "mongoose": "^5.9.17"
+    "mongoose": "^5.9.18",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -31,6 +32,7 @@
     "@types/koa-router": "^7.4.1",
     "@types/koa2-cors": "^2.0.1",
     "@types/mongoose": "^5.7.22",
+    "@types/socket.io": "^2.1.8",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
